--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^8.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "date-fns": "^2.28.0",
     "module-alias": "^2.2.2",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
